--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -10,8 +10,8 @@ interface Props {
 }
 
 const {
-  title = 'Welcome to Lexicon',
-  description = 'Lexicon is a website that gives you daily blog',
+  title = 'Welcome to SamBlog',
+  description = 'SamBlog is a website that gives you daily blog',
 } = Astro.props;
 ---
 
