--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -28,9 +28,9 @@ createdAt,
     comments.length === 0 ? (
       <p>No comments yet. Be the first to comment</p>
     ) : (
-      <ul class="max-h-[calc(3*5rem)] lg:max-h-[calc(3*6rem)] lg:overflow-y-auto lg:scrollbar-hide w-full p-4 border border-white rounded-lg">
+      <ul class="max-h-[calc(3*5rem)] overflow-y-auto w-full p-4 border border-white rounded-lg">
         {comments.map((comment: Comment, index: number) => (
-          <li  class="mb-4 pb-4 border-b border-gray-300 last:border-b-0">
+          <li class="mb-4 pb-4 border-b border-gray-300 last:border-b-0">
             <p class="font-semibold text-gray-800 mb-2">
               <span class="font-normal text-gray-600">Name: </span>{comment.name}
             </p>
@@ -46,6 +46,7 @@ createdAt,
     )
   }
 </div>
+
 
 
 
